# Orca

./: .gitignore  Changelog.txt  Orca TODOs.txt  deleteme.c
Win32/: CMakeLists.txt  CheckWithClangTidy.bat  check_orca2.py  debug_view.bat  make.bat  make.cmd  tmp_check.py
Win32/src/: compiler.c  generation.c  generation.h  main.c
Win32/tools/: img2carray.c
